                                     Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
 - 02-07-2006 fixed: subtitles where centered according to overscan corrections
 - 02-07-2006 fixed: filenames with an @ signed in them in the root of dvd/cd's would refuse to play
 - 01-07-2006 added: two new python functions:
                     xbmc.playSFX(filename) -- Plays a wav file by filename
                     xbmc.enableNavSounds(yesNo) -- Enables/Disables (True/False) nav sounds
 - 30-06-2006 changed: a toast message is displayed if last.fm username/password is wrong
 - 30-06-2006 added: visible condition Weather.IsFetched, is true if the weather data is downloaded
 - 30-06-2006 fixed: smb shares with special chars (spaces, %..) in them would fail to use correct authentication information when opening files.
 - 29-06-2006 fixed: While scanning, tag reading and remote thumb lookup was enabled in My Music Files.
 - 29-06-2006 fixed: shortcuts in my programs misbehaved slightly.
 - 28-06-2006 fixed: XLink Kai crash on load.
 - 28-06-2006 added: builtin command skin.theme. cycles skin themes (skin.theme(-1) to go backwards). skin label "skin.currenttheme". themes are now at the mercy of the skinner.
 - 28-06-2006 added: AIFF codec to paplayer.
 - 28-06-2006 fixed: Editing of text containing UTF8 character codes could cause crashes.
 - 28-06-2006 fixed: Listcontrol could sometimes truncate one character when not scrolling the selected item.
 - 26-06-2006 fixed: "Query Info For All Albums" accessible in files & library. Now Playing is now fully accessible at the bottom of context menus.
                             Item count fixed and a check for * all items and parent folder implemented.